letter-spacing issue

--- a/raw.css
+++ b/raw.css
@@ -16,6 +16,7 @@
           font-size: 16px;
           font-family: Roboto;
           line-height: 1.5;
+          letter-spacing: 0;
         }
 
         #content a:link, #content a:visited, #content a:hover, #content a:active{
